Day 9 - 12 tasks completed

--- a/EF Core/appsettings.json
+++ b/EF Core/appsettings.json
@@ -1,12 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning"
+  //  }
+  //},
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost; Database=TrainingEFCore; Username=postgres; Password=123456789"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderEmail": "opendevices100@gmail.com",
+    "SenderName": "Hotel Management System",
+    "Password": "bnir qxxx wyui mcpv"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning", // General EF Core logs
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning", // Suppress SQL command logs
+      "Microsoft.EntityFrameworkCore.ChangeTracking": "Warning" // Suppress change tracking logs during seeding
+    }
   }
 }
